--- a/src/styles/_components.tiles.scss
+++ b/src/styles/_components.tiles.scss
@@ -20,6 +20,11 @@
 		opacity: 1;
 	}
 }
+
+.tile-title h2 {
+    z-index: 1;
+}
+
 // .tile:hover {
 // 	background-image: linear-gradient(335deg, rgba(0, 0, 0, 0.06) 50%, transparent 50%);
 // }
